# bunnydsp

./: .gitignore  AGENTS.md  README.md  REGISTER-MAP.md  app.py  build.sh  index.html  package-lock.json  package.json  requirements-build.txt  requirements.txt  vite.config.js
.github/workflows/: release.yml
src/: app.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hid.rs  lib.rs  main.rs
static/: app.js  style.css
templates/: index.html
