[package]
name = "bunnydsp"
version = "1.0.0"
edition = "2021"
description = "Tanchjim Bunny DSP EQ Controller"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
