[package]
name = "bunnydsp"
version = "1.0.0"
edition = "2021"
description = "Tanchjim Bunny DSP EQ Controller"

[lib]
name = "bunnydsp"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
hidapi = "2"
env_logger = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.13"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
